# mfethuls

./: .gitignore  Caddyfile  Dockerfile  Dockerfile.metabase  LICENSE  README.md  ROADMAP.md  SCHEMA_CONTRACT.md  details.py  docker-compose.yml  env_example  experiments_template.csv  launch.bat  launch.sh  pyproject.toml  requirements.txt  setup.py
apps/: Home.py  _client.py  streamlit_app.py
apps/pages/: 1_Registry.py  2_Explorer.py  3_Datasets.py  4_Jobs.py
config/: instrument_params.json
docs/: api_reference.md  architecture.md  data_scientist_guide.md  database_integration.md  deployment.md  ingest_preview_contract.md  local_user_setup.md  registry_reference.md  tutorial.md
docs/guides/: cloud_deployment.md  data_analysis.md  local_setup.md  quickstart.md  workflow.md
docs/reference/: api.md  architecture.md  registry.md  schema.md
notebooks/: experiment_registry_demo.ipynb  local_tutorial.py  nmrglue_play.ipynb  parser_dev.ipynb  tutorial_basic_usecase.ipynb
openapi/: mfethuls-mvp.yaml  postman_collection.json
scripts/: docker_entrypoint.sh  run_api.py  run_quack.py  run_worker.py  setup_env.bat  setup_env.sh  sync_from_onedrive.sh  vm_setup.sh
sql/: README.md
sql/migrations/: 0001_add_columns_if_missing.sql  0002_index_creation_templates.sql  0003_create_ingest_jobs.sql  0004_upsert_dataset_metadata.sql  0005_add_dataset_location_columns.sql
src/mfethuls/: __init__.py  abstractions.py  api.py  characterise.py  comparison.py  config_loader.py  dataset.py  experiments.py  factory.py  ids.py  job_store.py  main.py  manifest.py  parse.py  quack_server.py  storage.py  (+3 more)
tests/: conftest.py  parser_test.py  test_api_service.py  test_cloud_storage.py  test_comparison.py  test_digitalocean_s3.py  test_duckdb_lifecycle.py  test_duckdb_s3_config.py  test_experiment_flow.py  test_manifest.py  test_parsers.py  test_plotting.py  test_real_data_pipeline.py  test_registry_row_builder.py  test_registry_validator.py  test_schema_normalization.py  test_validate_registry_dataframe.py
(+64 files in other folders)
