[project]
name = "mfethuls"
version = "0.1.0"
description = "Composable framework for lab instrument data parsing, characterization and analysis for python people in labs."
authors = [{name = "Luca Bertossi", email = "lucabertossi@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "nmrglue>=0.11",
    "numpy>=1.24.2",
    "pandas>=1.5.3",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
postgres = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
notebook = [
    "notebook>=6.5.3",
]
cloud = [
    "boto3>=1.34.0",
    "azure-storage-blob>=12.19.0",
]
viz = [
    "matplotlib>=3.10.1",
    "kaleido>=1.0.0",
    "plotly>=6.0.0",
    "streamlit>=1.36.0",
]
service = [
    "fastapi>=0.110.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mfethuls = ["py.typed"]
"mfethuls.config" = ["*.json", "schemas/*.json"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mfethuls = "mfethuls.main:main"
